# sistema_logistico

./: .gitignore  README.md  manage.py  pyproject.toml
autentication/: models.py  urls.py  utils.py  views.py
autentication/migrations/: 0001_initial.py
autentication/templates/: login.html
storage/: admin.py  models.py  urls.py  views.py
storage/migrations/: 0001_initial.py
storage/templates/: storage_homepage.html
system_manager/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
