[tool.poetry]
name = "sistema_logistico"
version = "0.1.0"
description = ""
authors = ["Gabriel Maires <gabriel.maires12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
Pillow = "^9.2.0"
pytest = "^7.1.3"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
mypy = "^0.982"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
